--- a/Sample/imORM4DSample.dproj
+++ b/Sample/imORM4DSample.dproj
@@ -129,8 +129,8 @@
         </DCCReference>
         <DCCReference Include="..\ORM\imOrm4D.Attributes.pas"/>
         <DCCReference Include="..\ORM\imOrm4D.Attributes.Helper.pas"/>
-        <DCCReference Include="..\ORM\imOrm4D.Interfaces.Criteria.pas"/>
-        <DCCReference Include="..\ORM\imOrm4D.Criteria.pas"/>
+        <DCCReference Include="..\ORM\imOrm4D.Interfaces.Select.pas"/>
+        <DCCReference Include="..\ORM\imOrm4D.Select.pas"/>
         <DCCReference Include="..\ORM\imOrm4D.Interfaces.Repository.pas"/>
         <DCCReference Include="..\ORM\imOrm4D.Repository.pas"/>
         <DCCReference Include="Entidades\imORM4D.Sample.Entidade.Produto.pas"/>
@@ -140,6 +140,7 @@
         <DCCReference Include="..\ORM\Drivers\imOrm4D.Connection.Postgres.pas"/>
         <DCCReference Include="..\ORM\Drivers\imOrm4D.Interfaces.Connection.pas"/>
         <DCCReference Include="..\ORM\Drivers\imOrm4D.Connection.Drivers.pas"/>
+        <DCCReference Include="..\ORM\Drivers\imOrm4D.Connection.Driver.Helper.pas"/>
         <BuildConfiguration Include="Base">
             <Key>Base</Key>
         </BuildConfiguration>
